Errors/Warnings solving

--- a/GPS_ARM.build_log.htm
+++ b/GPS_ARM.build_log.htm
@@ -3,10 +3,18 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\minan\ARM_M4_GPS\GPS_ARM.uvproj
-Project File Date:  04/29/2024
+E:\Electrical Computer 2\Introduction To Embedded Systems\ARM GPS\ARM_M4_GPS\GPS_ARM.uvproj
+Project File Date:  05/02/2024
 
 <h2>Output:</h2>
+Build target 'Target 1'
+compiling UART5.c...
+compiling UART0_PC.c...
+compiling main.c...
+compiling GPS.c...
+linking...
+Program Size: Code=15236 RO-data=1300 RW-data=56 ZI-data=1632  
+".\GPS_ARM.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
 </html>
